overflow fixed

--- a/src/styles/BakiciFiltre.css
+++ b/src/styles/BakiciFiltre.css
@@ -26,7 +26,7 @@
     line-height: 29px;
     padding: 40px 26px;
     transition: all 0.6s;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 @media screen and (max-width: 992px) {
